--- a/react/index.html
+++ b/react/index.html
@@ -6,7 +6,7 @@
     <title>AgentWP Dev UI</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="agentwp-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
